Impove contact page display on mobile - links no longer break out of layout, background box shadow is applied to correct element

--- a/web/stylesheets/cover.css
+++ b/web/stylesheets/cover.css
@@ -34,11 +34,11 @@ body {
     color: #fff;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
-    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
     display: table;
     width: 100%;
     height: 100%; /* For at least Firefox */
@@ -79,7 +79,51 @@ p.event-location {
  */
  div.contact-list {
     font-size:20px;
-    text-align: left;
+ }
+
+ div.contact-list ul{
+    padding-left:0;
+ }
+
+ div.contact-list ul li{
+    list-style:none;
+    padding:10px;
+ }
+
+
+  div.contact-list ul li a h4{
+     margin:0;
+ }
+
+  div.contact-list ul li a h4:after{
+    content: ":";
+  }
+
+  div.contact-list ul li a:hover{
+    text-decoration:none;
+  }
+
+ div.contact-list ul li a{
+    -ms-word-break: break-all;
+    /* Legacy IE, breaks words whe_ever */
+    word-break: break-all;
+    /* Non standard for webkit */
+    word-break: break-word;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    hyphens: none;
+    font-size:15px;
+    display:block;
+    width:100%;
+    padding:5px;
+}
+
+ div.contact-list ul li a:hover, div.contact-list ul li a:active{
+    background:blue;
+
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    background:#45859f;
  }
 
 /*
